crates/solite-fmt/src/snapshots/solite_fmt__tests__insert_multiple_rows.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- insert into t (a, b) values (1, 2), (3, 4), (5, 6)

-- Output:
insert into t(a, b)
values
  (1, 2),
  (3, 4),
  (5, 6);
