crates/solite-fmt/src/snapshots/solite_fmt__tests__insert_or_ignore.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- insert or ignore into t (a, b) values (1, 2)

-- Output:
insert or ignore into t(a, b)
values
  (1, 2);
