crates/solite-fmt/src/snapshots/solite_fmt__tests__insert_select.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- insert into t (a, b) select x, y from u

-- Output:
insert into t(a, b)
select
  x,
  y
from u;
