crates/solite-fmt/src/snapshots/solite_fmt__tests__json_operators.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select data->'key', data->>'value' from t

-- Output:
select
  data -> 'key',
  data ->> 'value'
from t;
